--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
     "tsx": "^4.6.2",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
